pxc/tests/test_171_thin_interface/thin2.px
public namespace thin2;
import common -;

public interface foo_i foo {
  public function void m1();
}

public struct foo <foo_i> {
  public function void m1() { println("m1"); }
  public function void m2() { println("m2"); }
}

public struct bar <foo_i> { // error
}

{
  ptr{foo_i} p = make_ptr{foo}();
  p->m1();
}

